# kechimochi

./: .dockerignore  .sonarcloud.properties  CHANGELOG.md  Development.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: android-e2e.yml  android-release-build.yml  docker.yml  publish.yml  release.yml  test.yml
docs/: csv-formats.md  database-versioning.md  http-api.md  release-process.md
e2e/: wdio.conf.ts
e2e/config/: spec-setup.ts
e2e/fixtures/: bulk_activities_conflict_baseline.csv  bulk_activities_conflicting_types.csv  bulk_activities_conflicts.csv  bulk_activities_negative.csv  seed.ts
e2e/helpers/: common.ts  dashboard.ts  import.ts  interactions.ts  library.ts  media-detail.ts  navigation.ts  profile.ts  setup.ts  sync-mock.ts  timeline.ts  update.ts  webdriver-cache.test.ts  webdriver-cache.ts
e2e/specs/: activity-feedback-loop.spec.ts  activity-logging.spec.ts  bulk-management.spec.ts  dashboard-pagination.spec.ts  dashboard.spec.ts  data-management.spec.ts  factory-reset.spec.ts  full-backup.spec.ts  http-api.spec.ts  information-enrichment.spec.ts  library-exploration.spec.ts  media-grid.spec.ts  media-management.spec.ts  media-operations.spec.ts  milestone-cuj.spec.ts  profile-management.spec.ts  profile-personalization.spec.ts  profile-theme-override.spec.ts  profile.spec.ts  progress-analysis.spec.ts  reading-analysis.spec.ts  startup-schema-mismatch.spec.ts  sync-backup-management.spec.ts
e2e/wdio/: wdio.base.conf.ts  wdio.web.conf.ts
src/: activity_modal.ts  api.ts  back_stack.ts  calendar.ts  chart_loader.ts  clipboard.ts  component.ts  components.ts  constants.ts  core.ts  extra_data.ts  file_dialogs.ts  html.ts  jiten_api.ts  main.ts  milestone_modal.ts  modal_base.ts  modals.ts  performance.ts  release_notes.ts  styles.css  sync_enablement.ts  sync_modal.ts  theme.ts  theme_sync.ts  time.ts  types.ts  updates.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/permissions/: main.toml
src-tauri/src/: backup.rs  csv_import.rs  dashboard_data.rs  db.rs  http_api.rs  instance_lock.rs  lib.rs  library_data.rs  main.rs  models.rs  read_performance.rs  sync_auth.rs  sync_cover_blobs.rs  sync_drive.rs  sync_merge.rs  sync_orchestrator.rs  sync_snapshot.rs  sync_state.rs  timeline_data.rs
src/components/: dashboard.ts  index.ts  media_view.ts  profile.ts
src/core/: component.ts  html.ts  logger.ts
src/dashboard/: ActivityCharts.ts  ActivityTotals.ts  Dashboard.ts  HeatmapView.ts  QuickLog.ts  StatsCard.ts  index.ts
src/importers/: anilist.ts  backloggd.ts  base.ts  bookmeter.ts  bookwalker.ts  cmoa.ts  imdb.ts  index.ts  jiten.ts  shonenjumpplus.ts  types.ts  vndb.ts
src/media/: MediaDetail.ts  MediaGrid.ts  MediaItem.ts  MediaLibraryBrowser.ts  MediaList.ts  MediaListItem.ts  MediaLog.ts  MediaView.ts  content_type.ts  cover_loader.ts  cover_visibility.ts  index.ts  library_preferences.ts  library_types.ts  modal.ts  progressive_cover.ts  render_incremental_collection.ts
src/modals/: activity.ts  base.ts  calendar.ts  index.ts  media.ts  milestone.ts  profile.ts  update.ts
tests/: api.test.ts  barrel_exports.test.ts  jiten_api.test.ts  logger.test.ts  main.test.ts  main.update_badge.test.ts  main_bootstrap.test.ts  performance.test.ts  setup.ts  sync-fixtures.ts  theme_sync.test.ts
(+105 files in other folders)
