[package]
name = "kechimochi"
version = "0.1.1"
description = "A personal language immersion tracker"
authors = ["Morgawr"]
edition = "2021"
default-run = "kechimochi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kechimochi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = { version = "0.22.1", features = ["alloc"] }
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }

# Web server (used only by the web-server binary)
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tempfile = "3"
zip = "8.3.0"
walkdir = "2.5.0"
