[package]
name = "kechimochi"
version = "0.2.9"
description = "A personal language immersion tracker"
authors = ["Morgawr"]
edition = "2021"
default-run = "kechimochi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kechimochi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = { version = "0.22.1", features = ["alloc"] }
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4", "v5"] }
url = "2.5.7"
oauth2 = { version = "5", default-features = false, features = ["reqwest"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
flate2 = "1.1.4"
futures = "0.3.31"
rayon = "1.10.0"

# Web server (used only by the web-server binary)
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tempfile = "3"
zip = "8.3.0"
walkdir = "2.5.0"
